--- a/4.Delete_item/templates/task.html
+++ b/4.Delete_item/templates/task.html
@@ -25,6 +25,7 @@
                 <div class="col-sm-2">
                     {% if task_name %}
                         <button type="submit" class="btn btn-primary float-right" name="operation" value="edit">Update</button>
+                        <button type="submit" class="btn btn-primary float-right" name="operation" value="delete">Delete</button>
                     {% else %}
                         <button type="submit" class="btn btn-primary float-right" name="operation" value="add">Add</button>
                     {% endif %}
@@ -35,6 +36,7 @@
             <h4>Task List</h4>
             <div class="list-group">
                 <div class="col-sm-3">
+
                 {% for task in tasks %}
                     {% if task_name == task[1] %}
                         <a href="{{ url_for('edit', task_id=task[0], task_name=task[1]) }}" class="list-group-item active" >{{ task[1] }}</a>
