--- a/5.Sort_tasks/templates/task.html
+++ b/5.Sort_tasks/templates/task.html
@@ -25,16 +25,32 @@
                 <div class="col-sm-2">
                     {% if task_name %}
                         <button type="submit" class="btn btn-primary float-right" name="operation" value="edit">Update</button>
+                        <button type="submit" class="btn btn-primary float-right" name="operation" value="delete">Delete</button>
                     {% else %}
                         <button type="submit" class="btn btn-primary float-right" name="operation" value="add">Add</button>
                     {% endif %}
                 </div>
             </div>
             <br>
-            </form>
+        </form>
+        <div class="row">
+            <div class="col-sm-2">
             <h4>Task List</h4>
-            <div class="list-group">
-                <div class="col-sm-3">
+            </div>
+            <div class="col-sm-4">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle=
+                            "dropdown" aria-haspopup="true" aria-expanded="false"> Sort tasks
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <li><a class="dropdown-item" href="{{ url_for('sort_by_name') }}">By task name</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('sort_by_date') }}">By date of creation</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="list-group">
+            <div class="col-sm-3">
                 {% for task in tasks %}
                     {% if task_name == task[1] %}
                         <a href="{{ url_for('edit', task_id=task[0], task_name=task[1]) }}" class="list-group-item active" >{{ task[1] }}</a>
@@ -42,9 +58,8 @@
                     <a href="{{ url_for('edit', task_id=task[0], task_name=task[1]) }}" class="list-group-item  ">{{ task[1] }}</a>
                     {% endif %}
                 {% endfor %}
-                </div>
             </div>
-
+        </div>
     </div>
 </body>
 </html>
